--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
   <h2>Links</h2>
   <ul>
     <li><a href="https://www.linkedin.com/in/nathan-fageroos/">LinkedIn</a></li>
-    <li><a href="https://github.com">GitHub</a></li>
-    <li><a href="#">Project Portfolio</a></li>
+    <li><a href="https://github.com/nfageroos/">GitHub</a></li>
+    <li><a href="https://github.com/nfageroos/PersonalProjects">Project Portfolio</a></li>
   </ul>
 </body>
 </html>
