--- a/index.html
+++ b/index.html
@@ -16,10 +16,26 @@
       color: #0066cc;
       text-decoration: none;
     }
+    <style>
+  body {
+    font-family: Arial, sans-serif;
+    max-width: 700px;
+    margin: 40px auto;
+    line-height: 1.6;
+    text-align: center;
+  }
+
+  .profile-pic {
+    width: 150px;
+    border-radius: 50%;
+    margin-bottom: 15px;
+  }
+</style>
   </style>
 </head>
 
 <body>
+  <img src="photo.jpg" alt="Photo of Your Name" class="profile-pic">
   <h1>Nathan Fageroos</h1>
   <p>Class of 2027 | Management Information Systems | Iowa State University</p>
 
