--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
   <h2>About Me</h2>
   <p>
-    I am interested in software engineering and data science. I am currently looking for an internship or coop for summer of 2026. My interests are running, piano and reading.
+    I am interested in software engineering and data science. I am currently looking for an internship or co-op for summer of 2026. My interests are running, piano and reading.
   </p>
 
   <h2>Resume</h2>
